--- a/assets/css-main.css
+++ b/assets/css-main.css
@@ -361,6 +361,7 @@ body {
 	background-repeat:no-repeat;
 	background-position:center;
 	background-size: cover;
+	background-attachment: fixed;
     font-family: Roboto,sans-serif
 }
 
