--- a/assets/css-main.css
+++ b/assets/css-main.css
@@ -356,14 +356,43 @@ img,video {
 
 body {
     --tw-bg-opacity: 1;
+    margin: 0;
     background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-	background-image: url("images/bg.png");
+    font-family: Roboto,sans-serif;  
+}
+
+
+.search-contain{
+    display: flex;
+    justify-content: center;
+
+}
+
+main{
+    margin-top: 30vh;
+    /* height: 100%; */
+    /* width: 100%; */
+    
+    z-index: 100;
+    position: relative;
+}
+
+.contained{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -100;
+	background-image: url("images/bg1.png");
 	background-repeat:no-repeat;
 	background-position:center;
-	background-size: cover;
-	background-attachment: fixed;
-    font-family: Roboto,sans-serif
+	/* background-size: 75%; */
+	background-size: cover ;
 }
+
+
 
 .dark body {
     --tw-bg-opacity: 1;
@@ -372,10 +401,11 @@ body {
     color: rgb(191 219 254 / var(--tw-text-opacity))
 }
 
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
 }
 
 *,:before,:after {
