--- a/assets/css-main.css
+++ b/assets/css-main.css
@@ -354,6 +354,108 @@ img,video {
     display: none
 }
 
+/* --------version depending on screen width----------- */
+
+@media all and (min-width: 901px){}
+@media all and (orientation : landscape) { 
+    /* FOR LANDSCAPE MODE */
+   
+    .contained{
+        max-width: 100%;
+        top : 0%;
+        right: 10%;
+        left : 10%;
+        bottom: -100%;
+        /* height : 100%; */
+        min-height: 100%;
+        background-size: cover;
+    }
+  }
+  
+  @media all and (max-width: 900px){}
+  @media all and (orientation : portrait){
+      /* FOR PORTRAIT MODE  */
+   
+    .contained{
+        top : 10%;
+        right: -20%;
+        left : -20%;
+        min-width: 100%;
+        /* max-width: 120%; */
+        bottom : -20%;
+        /* min-height: 80%; */
+        max-height: 120%;
+        background-size: cover;
+    }
+  }
+
+  /* @media all and (min-width:960px) and (max-width: 1023px) {
+    .contained{
+        top:0;
+        right: 0;
+        left : 0;
+        bottom: 0;
+        height: 110%;
+        background-size: cover;
+    }
+  }
+  
+  @media all and (min-width:801px) and (max-width: 959px) {
+    .contained{
+        top:0;
+        right: 0;
+        left : 0;
+        bottom: 0;
+        height: 110%;
+        background-size: cover;
+    }
+  }
+  
+  @media all and (min-width:769px) and (max-width: 800px) {
+    .contained{
+        top:0;
+        right: 0;
+        left : 0;
+        bottom: 0;
+        height: 110%;
+        background-size: cover;
+    }
+  }
+  
+  @media all and (min-width:569px) and (max-width: 768px) {
+    .contained{
+        top:0;
+        right: 0;
+        left : 0;
+        bottom: 0;
+        height: 110%;
+        background-size: cover;
+    }
+  }
+  
+  @media all and (min-width:481px) and (max-width: 568px) {
+    .contained{
+        top:0;
+        right: 0;
+        left : 0;
+        bottom: 0;
+        height: 110%;
+        background-size: cover;
+    }
+  }
+  
+  @media all and (max-width: 480px) {
+    .contained{
+        top:0;
+        right: 0;
+        left : 0;
+        bottom: 0;
+        height: 100%;
+        background-size: cover;
+    }
+  } */
+
+
 body {
     --tw-bg-opacity: 1;
     margin: 0;
@@ -389,7 +491,7 @@ main{
 	background-repeat:no-repeat;
 	background-position:center;
 	/* background-size: 75%; */
-	background-size: cover ;
+	/* background-size: cover ; */
 }
 
 
